SF Primes/src/objects/WebID__c.object
<CustomObject>
    <description>webIDs are the name given to website on an account</description>
    <fields>
        <fullName>AA_Echelon_Level__c</fullName>
        <formula>IF( ProCare_Gold__c &gt; 0, &quot;Audience Optimization&quot;, IF( GM_Performance_ProCare__c &gt;0, &quot;GM Performance&quot;,IF( ProCare_Silver__c &gt;0,&quot;ProCare&quot;,IF( Procare_Product__c &gt;0,&quot;ProCare&quot;,&quot;No ProCare&quot;))))</formula>
        <inlineHelpText>This is based on active installed base. If you see a ProCare echelon product that is active in the installed base that is not represented, submit an Inquiry - Service Reports &amp; Applications case with the webid &amp; product as examples.</inlineHelpText>
        <label>AA Echelon Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AA_Manager_Notes__c</fullName>
        <inlineHelpText>This field is only visible to Services Managers.</inlineHelpText>
        <label>AA Manager Notes</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AA_Phone__c</fullName>
        <formula>Account_Advocate__r.Phone + &apos; x&apos;  + Account_Advocate__r.Extension</formula>
        <label>AA Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Advocate_Extension__c</fullName>
        <formula>Account_Advocate__r.Extension</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AA Extension</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Advocate__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account Advocate</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Website</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Account Executive on the Account</description>
        <label>Digital Solutions Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebIDs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Sites</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Ad_Review2__c</fullName>
        <description>This will link to ad creator if there are multiple DAP products on the account.</description>
        <inlineHelpText>This will link to ad creator if there are multiple DAP products on the account.</inlineHelpText>
        <label>Ad Review</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ad_Review3__c</fullName>
        <description>This will link to ad creator if there are multiple DAP products on the account.</description>
        <inlineHelpText>This will link to ad creator if there are multiple DAP products on the account.</inlineHelpText>
        <label>Ad Review</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Ad_Review__c</fullName>
        <description>This will link to ad creator</description>
        <inlineHelpText>This will link to ad creator</inlineHelpText>
        <label>Ad Review</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Advantages__c</fullName>
        <inlineHelpText>List anything that differentiates then as a dealer. Examples: special sales process, highest customer satisfaction rating, oil change specials, free tires for life, discounts, etc.</inlineHelpText>
        <label>Advantages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Advocate_DAP_Data_Last_Updated__c</fullName>
        <inlineHelpText>Please enter today&apos;s date if you have updated or validated the data in this section.</inlineHelpText>
        <label>Advocate DAP Data Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Advocate_Dealer_Data_Last_Updated__c</fullName>
        <inlineHelpText>Please enter today&apos;s date if you have updated or validated the data in this section.</inlineHelpText>
        <label>Advocate Dealer Data Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Approved_GEO_s__c</fullName>
        <description>The ones you CAN go after. These are not being targeted now, but have been approved to be added when strategy and timing permits</description>
        <inlineHelpText>The GEOs the dealer has requested we target</inlineHelpText>
        <label>Dealer Requested GEOs</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Autotrader_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Autotrader Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BAC_Dealer_Code__c</fullName>
        <description>Text field for user to enter the dealer&apos;s BAC or dealer code. This is then used through the OOS button to populate the OOS login page.</description>
        <inlineHelpText>Enter the Dealer Code(BAC, if GM) here and it will auto-fill the OOS</inlineHelpText>
        <label>BAC/Dealer Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BZ_Site__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox to indicate if website originated from BZ. Based on the Order Priority field being marked as IFS Project 7.</description>
        <label>BZ Migrated Site</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Best_Selling_Model__c</fullName>
        <label>Best Selling Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bing_Webmaster_Tools_Submitted_To__c</fullName>
        <description>Select Bing Webmaster Tools Login</description>
        <inlineHelpText>Select Bing Webmaster Tools Login</inlineHelpText>
        <label>Bing Webmaster Tools Submitted To</label>
        <picklist>
            <picklistValues>
                <fullName>procareseo2@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo3@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo4@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo5@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo6@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo7@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo8@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo9@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo10@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo11@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo12@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo13@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo14@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo15@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo16@yahoo.com</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>procareseo17@yahoo.com</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Branded_Name_of_Dealership__c</fullName>
        <inlineHelpText>Example: Stadium GM Superstore. Use when the name is actually a bit different.</inlineHelpText>
        <label>Branded Name of Dealership</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bulk_Upload_Date__c</fullName>
        <label>Bulk Upload Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cities__c</fullName>
        <label>Cities</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Client_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If populated, this is the primary Services contact for Cobalt related products for this dealer group.</inlineHelpText>
        <label>Marketing Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebIDs4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cobalt_Consolidation_ID__c</fullName>
        <externalId>true</externalId>
        <label>Cobalt_Consolidation_ID</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Cobalt_Services_Attribute_Reason__c</fullName>
        <label>Cobalt Services Attribute Reason</label>
        <picklist>
            <controllingField>Cobalt_Services_Attribute__c</controllingField>
            <picklistValues>
                <fullName>Pilot Participant - ProCare</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot Participant - Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Service Focus - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High Service Focus - Low Sat</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Cobalt_Services_Attribute__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Cobalt Services Attribute</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Counties__c</fullName>
        <label>Counties</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Creative_Case_Limit__c</fullName>
        <label>Creative Case Limit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Creative_Case_Tally__c</fullName>
        <label>Creative Case Tally</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Current_User_Is_Advocate__c</fullName>
        <description>If the current user is the same as the Account Advocate user then yes else no.</description>
        <formula>IF( $User.Id = Account_Advocate__r.Id , &quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Current User Is Advocate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_User_Is_OMS__c</fullName>
        <description>If the current user is the same as the Online Marketing Specialist user then yes else no.</description>
        <formula>IF($User.Id = Online_Marketing_Specialist__r.Id , &quot;Yes&quot;,&quot;No&quot;)</formula>
        <label>Current User Is OMS</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Type__c</fullName>
        <inlineHelpText>We&apos;ve identified 4 types of customers. Tell me which one best identifies your IDEAL customer. In other words, the customer you feel represents your best profit opportunity based your dealership&apos;s strengths?</inlineHelpText>
        <label>Customer Type</label>
        <picklist>
            <picklistValues>
                <fullName>Discount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Impulse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Loyalty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Needs Based</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>DAP_Focus_Vehicle__c</fullName>
        <inlineHelpText>Example: &quot;Promote CTS but not SRX&quot;</inlineHelpText>
        <label>DAP Focus Vehicle</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DAS_Data_Last_Updated__c</fullName>
        <label>DAS Data Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DA_Echelon_Level__c</fullName>
        <label>DA Echelon Level</label>
        <picklist>
            <picklistValues>
                <fullName>Silver</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Platinum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Help_List_Description__c</fullName>
        <label>DA Help List Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DA_Help_List_Manager_Comments__c</fullName>
        <label>DA Help List Manager Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DA_Help_List_Reason__c</fullName>
        <label>DA Help List Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Ad Performance – only use if recommended by DAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Displacement – Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Concurrent Digital Advertising program provided by OEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer says Sales misrepresented product</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealership Personnel Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissatisfied with billing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Inventory / Co-Op Fund</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lack of Product Flexibility</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pilot termination</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan to move money to non-digital advertising</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products not delivering expected results</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting – Inability to Demonstrate ROI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reporting – Lack of Transparency</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ROI - results not good enough</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Signed up due to OEM influence</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DA_Help_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>DA Help List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>DA_Performance_Trends2__c</fullName>
        <inlineHelpText>Use this field if there is more than one DAP product active on the WebId.</inlineHelpText>
        <label>DA Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DA_Performance_Trends3__c</fullName>
        <inlineHelpText>Use this field if there is more than one DAP product active on the WebId.</inlineHelpText>
        <label>DA Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DA_Performance_Trends__c</fullName>
        <label>DA Update</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DDP__c</fullName>
        <label>DDP</label>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Code__c</field>
            <operation>contains</operation>
            <value>DDP</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>DMA_or_Radius_Targeted_Details__c</fullName>
        <description>Detailed information about OMS Geography targeting.</description>
        <inlineHelpText>Detailed information about OMS Geography targeting.</inlineHelpText>
        <label>DMA or Radius Targeted Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>DMS_Data_Last_Modified_Date__c</fullName>
        <description>Displays the date/time when a change was made to either the DMS (Primary), DMS (Secondary), Username or Password fields.</description>
        <inlineHelpText>Will update via workflow when either the DMS (Primary), DMS (Secondary), Username or Password fields are changed.</inlineHelpText>
        <label>DMS Data Last Modified Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DMS_Secondary__c</fullName>
        <label>DMS (Secondary)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DMS__c</fullName>
        <label>DMS (Primary)</label>
        <picklist>
            <picklistValues>
                <fullName>ACS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adams</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADP ARG (EDS)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Advent</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Automate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Autosoft</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DPC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reynolds &amp; Reynolds</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SelectQu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UCS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DSM_Mobile__c</fullName>
        <formula>Account_Executive__r.MobilePhone</formula>
        <label>DSM Mobile</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSM_Nat_Ent__c</fullName>
        <description>RQ-03047</description>
        <formula>Account__r.Designated_DSM_Nat_Ent__r.FirstName &amp; &apos; &apos; &amp; Account__r.Designated_DSM_Nat_Ent__r.LastName</formula>
        <label>DSM Nat Ent</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Audited__c</fullName>
        <label>Date Audited</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Dealer_Approvals__c</fullName>
        <inlineHelpText>Please provide primary contact information, who you work with, who approves campaigns, compliance and any critical approval notes.</inlineHelpText>
        <label>General Dealer Updates and Approvals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_DAP_Goals__c</fullName>
        <inlineHelpText>Example: &quot;Dealer just added Cadillac brand to their stores and wants to increase exposure&quot;</inlineHelpText>
        <label>Dealer DAP Goals</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Goals_SEO__c</fullName>
        <label>Dealer Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Goals__c</fullName>
        <inlineHelpText>Dealer business goals/objectives – example: target revenues, ROI, etc.</inlineHelpText>
        <label>Dealer Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Name__c</fullName>
        <formula>Account__r.Dealer_Group_Name2__c</formula>
        <label>Dealer Group Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dealer_Group_Support_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is filled out by Service Ops when there is a GAM, CAM, or a la carte Dealer Group Support.</inlineHelpText>
        <label>Dealer Group Support Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dealer_Hurts__c</fullName>
        <inlineHelpText>Dealer “hurts” - challenges in website traffic, leads, conversions, phone/email leads, etc</inlineHelpText>
        <label>Dealer Hurts</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dealer_Logo__c</fullName>
        <description>If we have logo then field will show &quot;Yes&quot;, if not it will show &quot;No.&quot; A blank field indicates the status is unknown.</description>
        <inlineHelpText>If we have logo then field will show &quot;Yes&quot;, if not it will show &quot;No.&quot; A blank field indicates the status is unknown.</inlineHelpText>
        <label>Dealer Logo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Dealership_logo__c</fullName>
        <inlineHelpText>Select &quot;Yes&quot; if the logo is in the dealer folder.</inlineHelpText>
        <label>Dealership logo</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Digital_Advertising_Strategist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Digital Advertising Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebIDs8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Email_Goals_and_Pain_Points__c</fullName>
        <inlineHelpText>Please provide the goals your dealer wants to accomplish with their email program this period.</inlineHelpText>
        <label>Email Goals and Pain Points</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Email_Health__c</fullName>
        <inlineHelpText>Please provide traditional health check notes and any applicable hot list updates with the date.</inlineHelpText>
        <label>Email Account Health</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>80</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Fixed_Operations_Details__c</fullName>
        <inlineHelpText>What fixed operations does the dealership offer? Ask the dealer to tell you a little about each area and how they stand apart from their competition.</inlineHelpText>
        <label>Fixed Operations Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GM_Performance_ProCare__c</fullName>
        <description>This is not intended to display on the page layout.</description>
        <label>GM Performance ProCare</label>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Code__c</field>
            <operation>equals</operation>
            <value>23.207.00</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Geographic_Interest__c</fullName>
        <inlineHelpText>Collect up to 10 geographies.</inlineHelpText>
        <label>Geographic Interest</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Goal_Measurement_Tools__c</fullName>
        <label>Goal Measurement Tools</label>
        <picklist>
            <picklistValues>
                <fullName>AdWizard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Voicestar</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Group_Account_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If populated, this is the primary Services contact for Cobalt related products for this dealer group.</inlineHelpText>
        <label>Group Account Manager</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebIDs3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Hot_List_Manager_Comments__c</fullName>
        <label>Hot List Manager Comments</label>
        <length>10000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hot_List_Reason__c</fullName>
        <label>Hot List Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Product/Data Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Competitive Displacement</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Disengaged</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pricing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Products not delivering expected results</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hot_List__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hot List</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Installed_Base_Parent_Count_Of_Glory__c</fullName>
        <label>Installed Base Parent Count Of Glory</label>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Analyst2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebIDs7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebIDs6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LMA_Product__c</fullName>
        <description>Count of LMA Product in Install Base</description>
        <label>LMA Product</label>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Description__c</field>
            <operation>contains</operation>
            <value>LMA</value>
        </summaryFilterItems>
        <summaryFilterItems>
            <field>Installed_Base__c.Product_Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </summaryFilterItems>
        <summaryForeignKey>Installed_Base__c.WebID__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>LMA_Strategist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LMA Strategist</label>
        <referenceTo>User</referenceTo>
        <relationshipName>WebIDs5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Last_Site_Check_Date__c</fullName>
        <inlineHelpText>Enter the date of the most recent Testimonial site check.</inlineHelpText>
        <label>Last Site Check Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Least_Selling_Model__c</fullName>
        <label>Least Selling Model</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Link_To_Mission__c</fullName>
        <description>This is an external reference to the old Social Instance of Salesforce.</description>
        <inlineHelpText>Copy the link into another browser.  If you are in IE then use Firefox, if you are in Firefox then use IE.  Log in to the other instance of Salesforce in order to see the mission.</inlineHelpText>
        <label>Link To Mission</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Locale__c</fullName>
        <label>Locale</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location_Name__c</fullName>
        <inlineHelpText>This is the name of the Location from the old Social Instance of Salesforce.</inlineHelpText>
        <label>Location Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MLP_Pages__c</fullName>
        <label>MLP Pages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <externalId>true</externalId>
        <label>Migration_ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Models_to_Promote_the_Least__c</fullName>
        <label>Models to Promote the Least</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Models_to_Promote_the_Most__c</fullName>
        <label>Models to Promote the Most</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>NRM_Call_Priority__c</fullName>
        <description>Used for the GM NRM launch to prioritize call outs to dealers. This will be pulled into the MM object and utilized there.</description>
        <label>NRM Call Priority</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Vehicle_Sales_Target__c</fullName>
        <label>New Vehicle Sales Target</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Vehicle_Sales__c</fullName>
        <inlineHelpText>Number of used vehicles sold per month</inlineHelpText>
        <label># New Vehicle Sales/Month</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Nicknames__c</fullName>
        <inlineHelpText>Nicknames used to describe the geographical area. Example: Dallas Fort Worth is referred to as DFW.</inlineHelpText>
        <label>Nicknames</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nitra_URL__c</fullName>
        <label>Nitra URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Non_Performing_GEOs__c</fullName>
        <inlineHelpText>The GEOs that did not perform, including reason (e.g., ranking/traffic) and dates.</inlineHelpText>
        <label>Non-Performing GEOs</label>
        <type>TextArea</type>
    </fields>
</CustomObject>